# get-wandb-data

./: README.md  pyproject.toml
src/get_wandb_data/: __init__.py  core.py
